--- a/overview.html
+++ b/overview.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>overview</title>
+    <title>overview</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
 </head>
-
+    
 <body>
+    <header>
+        <img src="header.png" class="header">
+    </header>
     <h1>Iets kweeni hoe moeilijk stel hier je vraag</h1>
     <form>
         <input type="text">
